[metadata]
name = eye_ai
version = 1.0.0-dev1
description = ai wrapper for image
author = Kitahata Tomotaka
author_email = northfield.t@outlook.com
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.tool.sony.biz/bitbucket/users/0073002221/repos/ai_wrapper/browse
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.7
install_requires =
    opencv-python
    requests
    nnabla-ext-cuda110
include_package_data = True
package_dir = =src
packages = find:

[options.packages.find]
where = src
